--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,13 @@
                 @if (User.Identity.IsAuthenticated)
                 {
                   <a asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a>
-                  <a asp-area="Identity" asp-page="/Account/Logout" >Log out</a>
+                  <form class="form-inline" asp-area="Identity"
+                                asp-page="/Account/Logout"
+                                asp-route-returnUrl="@Url.Action("Index",
+                                "Home", new { area = "" })">
+                                        <button type="submit" class=" btn
+                                    btn-link" id="logoutandlogin">Logout</button>
+                                    </form>
                 }
                 else{
                   <a asp-area="Identity" asp-page="/Account/Register">Register</a>
