Create search user by email

--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -45,7 +45,7 @@
                 </div>
                 <div class="searching">
                     <div class="search-container">
-                        <form action="#">
+                        <form asp-controller="Account" asp-action="SearchUser">
                             <input type="text" placeholder="Search for Email..." name="search">
                             <button type="submit"><i class="fa fa-search"></i></button>
                         </form>
@@ -79,14 +79,14 @@
                                     <td>@Model.ElementAt(i).User_Birthdate</td>
                                     <td>@Model.ElementAt(i).PhoneNumber</td>
                                     <td>@Model.ElementAt(i).User_Address</td> 
-                                    <td>@data[i]</td>
+                                    @* <td>@data[i]</td> *@
                                     <td>@Model.ElementAt(i).User_Status</td>
                                     <td>
                                         <a asp-controller="Account" asp-action="updateAccount" asp-route-id="@Model.ElementAt(i).Id" class="btn btn-outline-primary rounded-pill"> Update </a>
                                         <a asp-controller="Account" asp-action="Delete" asp-route-id="@Model.ElementAt(i).Id" class="btn btn-outline-primary rounded-pill"> Delete </a>
                                     </td>
                                 </tr> 
-                            }                                          
+                            }                                         
                         </tbody>
                     </table>
                 </div>
