Kiet edit order detail

--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -79,7 +79,7 @@
                                     <td>@Model.ElementAt(i).User_Birthdate</td>
                                     <td>@Model.ElementAt(i).PhoneNumber</td>
                                     <td>@Model.ElementAt(i).User_Address</td> 
-                                    @* <td>@data[i]</td> *@
+                                    <td>@data[i]</td>
                                     <td>@Model.ElementAt(i).User_Status</td>
                                     <td>
                                         <a asp-controller="Account" asp-action="updateAccount" asp-route-id="@Model.ElementAt(i).Id" class="btn btn-outline-primary rounded-pill"> Update </a>
