--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -20,10 +20,10 @@
                   <div class="row mb-4 d-flex align-items-center">
                   <div class="col-md-4 col-lg-4 col-xl-4">
                     <img 
-                      src="~/img/LogoFPTBook.jpg"
-                      class="img-fluid rounded-3" alt="">
+                      src="~/img/@c.Book.Book_Image"
+                      class="img-fluid rounded-3" alt="" width="100">
                   </div>
-                  <div class="col-md-2 col-lg-2 col-xl-1" ><h6 class="text-black " style="padding-right: 40px;">@c.Book.Book_Name</h6></div>
+                  <div class="col-md-2 col-lg-2 col-xl-1" ><h5 class="text-black">@c.Book.Book_Name</h5></div>
                   
                   <div class="col-md-2 col-lg-2 col-xl-2">
                     
