--- a/Views/Home/OrderHistory.cshtml
+++ b/Views/Home/OrderHistory.cshtml
@@ -44,20 +44,32 @@
                                         @payment
                                     </td>
                                     @if (@o.Order_Status == 0)
-                                        {
-                                    <td>                     
-                                        Waiting Accept                                   
-                                    </td>
-                                     }
+                                    {
+                                        <td>                     
+                                            Waiting Accept                                   
+                                        </td>
+                                    }
+                                    else if(@o.Order_Status == 1){
+                                        <td>                     
+                                            Cancel                                   
+                                        </td>
+                                    }
+                                    else if(@o.Order_Status == 2){
+                                        <td>                     
+                                            Delivering                                   
+                                        </td>
+                                    }
                                     else{
                                         <td>
-                                            Delivering
+                                            Delivered
                                         </td>                                        
                                      }
                                     <td>
                                         @if (@o.Order_Status == 0)
                                         {
-                                            <a class="btn btn-outline-primary rounded-pill"> Cancel</a>  
+                                            <a class="btn btn-outline-primary rounded-pill" asp-controller="Home"
+                                            asp-action="CancelOrder" asp-route-idOrder="@o.Order_ID" 
+                                            asp-route-orderDate = "@o.Order_OrderDate"> Cancel</a>  
                                         }
                                         <a class="btn btn-outline-primary rounded-pill"> Buy More </a>
                                     </td>
