--- a/Views/Order/orderDetail.cshtml
+++ b/Views/Order/orderDetail.cshtml
@@ -41,7 +41,7 @@
             </div><br>
             <div class="form-floating">
                 <input type="date" asp-for="@Model.ElementAt(0).Order.Order_OrderDate" 
-                class="form-control" aria-required="true" style="width: 200px;" readonly/>
+                class="form-control" aria-required="true" style="width: 200px;" readonly name="orderDate"/>
                 <label>Order Date:</label>
                 <span  class="text-danger"></span>
             </div><br>
@@ -105,35 +105,51 @@
             {
                 <div class="form-floating">
                     <p>Status:</p>
-                    <input id="contactChoice" type="radio"  value="1" asp-for="@Model.ElementAt(0).Order.Order_Status" name="status"> Accept
+                    <input id="contactChoice" type="radio"  value="4" asp-for="@Model.ElementAt(0).Order.Order_Status" name="status"> Accept
                     <br>
                     <br>
-                    <input id="contactChoice" type="radio"  value="0" asp-for="@Model.ElementAt(0).Order.Order_Status" name="status" checked> Cancel
+                    <input id="contactChoice" type="radio"  value="1" asp-for="@Model.ElementAt(0).Order.Order_Status" name="status" > Cancel
+                    <span  class="text-danger"></span>
+                </div>
+            }
+            else if(@Model.ElementAt(0).Order.Order_Status == 1){
+                <div class="form-floating">
+                    <p>Status:</p>
+                    <input id="contactChoice" type="radio"  value="4" asp-for="@Model.ElementAt(0).Order.Order_Status" name="status" > Accept
+                    <br>
+                    <br>
+                    <input id="contactChoice" type="radio"  value="1" asp-for="@Model.ElementAt(0).Order.Order_Status" name="status" checked> Cancel
                     <span  class="text-danger"></span>
                 </div>
             }
             else{
             <br>
-            <div class="form-floating">
-                <p>Status:</p>
-                @if (@Model.ElementAt(0).Order.Order_Status == 1)
+            
+                @if (@Model.ElementAt(0).Order.Order_Status == 2)
                 {
+                    <div class="form-floating">
+                <p>Status:</p>
                     <p>Delivering</p>
-                    <input id="contactChoice1" type="radio" value="1" asp-for="@Model.ElementAt(0).Order.Order_Status" name="status" checked> 
+                    <input id="contactChoice1" type="radio" value="2" asp-for="@Model.ElementAt(0).Order.Order_Status" name="status" checked> 
                     <br>
                     <br>
                     <p>Delivered</p>
-                    <input id="contactChoice1" type="radio" asp-for="@Model.ElementAt(0).Order.Order_Status" name="status" value="2"> 
+                    <input id="contactChoice1" type="radio" asp-for="@Model.ElementAt(0).Order.Order_Status" name="status" value="3"> 
+                </div>
                 }
+
                 else{
+                    <div class="form-floating">
+                <p>Status:</p>
                     <p>Delivering</p>
-                    <input id="contactChoice1" type="radio"  value="1" asp-for="@Model.ElementAt(0).Order.Order_Status" name="status"> 
+                    <input id="contactChoice1" type="radio"  value="2" asp-for="@Model.ElementAt(0).Order.Order_Status" name="status"> 
                     <br>
                     <br>
                     <p>Delivered</p>
-                    <input id="contactChoice1" type="radio"  value="2" asp-for="@Model.ElementAt(0).Order.Order_Status" name="status" checked> 
+                    <input id="contactChoice1" type="radio"  value="3" asp-for="@Model.ElementAt(0).Order.Order_Status" name="status" checked> 
+                </div>
                 }
-            </div>
+            
             }
             
             <br>
